<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_AxisControl" Id="{c02b2c99-be98-4acd-b0cb-dc10c1ff77f2}">
    <Declaration><![CDATA[(*These are parameters that are used to initiate axis movements
They are commands that are commonly used commands*)
TYPE ST_AxisControl :
STRUCT
    //Actions from controls system
    bExecute: BOOL; //Trigger to execute a motion function block
    bReset: BOOL; //Reset axis from Error state
    bStop: BOOL; //Stop the axis movement (immediate deceleration)
    bHalt: BOOL; //Halt the axis movement (controlled the deceleration)
    bEnable: BOOL; //Enable axis drive (activates the servo drive)
    bJogFwd: BOOL; //Jog the axis forward(manual movement)
    bJogBwd: BOOL; //Jog the axis backward (manual movement)
    bInterlockFwd: BOOL := FALSE; //Enable interlock for forward movement
    bInterlockBwd: BOOL := FALSE; //Enable interlock for backward movement
    eCommand: E_MotionFunctions; //Specifies the motion function to execute
    fVelocity: LREAL; //Velocity must be specified
    fJogVelocity: LREAL; //Velocity for jogging operations
    fAcceleration: LREAL; //Acceleration for the movement command (0 uses the NC default)
    fDeceleration: LREAL; //Deceleration for the movement command
    fPosition: LREAL; //Target position for absolute moves or distance for relative moves
    bHWMaskActive: BOOL := FALSE; //Indicates if hardware masking is active (used for conditional movement)
    fMaskedTemperature: LREAL := 0.0; //Temperature value used when the hardware masking is active
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>